# api_diabetes_model

./: .gitignore  Dockerfile  README.md  pyproject.toml
Notebook/: Diabetes_notebook_enhanced_version.ipynb
api_diabetes_model/: main.py  training.py
html/: index.html  main.css
model/: __main__.py
model/pickle/: diabetes_model.pkl
