[tool.poetry]
name = "api_diabetes_model"
version = "1.0"
description = ""
authors = ["Jairo Calderón"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.87.0"
scikit-learn = "1.0.2"
pandas = "^1.5.2"
joblib = "^1.2.0"
uvicorn = "^0.15.0"
mlflow = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
